# data-mangeling

./: .gitignore  README.md  copy_every_other_frame.py  pyproject.toml  sort_pictures_to_folders.py
data_wrangling/: __init__.py
tests/: test_data_mangeling.py  test_data_wrangeling.py
